@@ -1,6 +1,6 @@
 AC_PREREQ(2.60)
 
-AC_INIT([Lemon Launcher], [0.0.5], [josh@slashdev.ca])
+AC_INIT([Lemon Launcher], [0.0.6], [josh@slashdev.ca])
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_MACRO_DIR([m4])
 
