@@ -49,20 +49,15 @@ void options::load(const char* conf_dir)
       CFG_STR(KEY_MAME_SNAP_PATH, "", CFGF_NONE),
       
       CFG_INT(KEY_KEYCODE_EXIT, 27, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_RELOAD, 49, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_TOGGLE, 50, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_UP, 273, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_DOWN, 274, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_PGUP, 276, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_PGDOWN, 275, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_BTN1, 306, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P1_BTN2, 308, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_UP, 114, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_DOWN, 102, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_PGUP, 100, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_PGDOWN, 103, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_BTN1, 97, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_P2_BTN2, 115, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_UP, 273, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_DOWN, 274, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_PGUP, 276, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_PGDOWN, 275, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_RELOAD, 53, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_TOGGLE, 54, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_SELECT, 49, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_BACK, 50, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_ALPHAMOD, 64, CFGF_NONE),
       CFG_END()
    };
    
